<resources>
    <string name="app_name">DAM_UC3_KevinCaman</string>
    <string name="ic">Correo Electrónico</string>
    <string name="itc" />
    <string name="icl">Contraseña</string>
    <string name="bten">Entrar</string>
    <string name="p1">¿Has olvidado tu contraseña?</string>
    <string name="ch">No cerrar sesión</string>
    <string name="reg">Regístrate</string>
    <string name="eg">Es gratis (y lo seguirá siendo).</string>
    <string name="n">Nombre:</string>
    <string name="no" />
    <string name="a">Apellidos:</string>
    <string name="ap" />
    <string name="c">Tu dirección de correo electrónico:</string>
    <string name="c1">Tu dirección de</string>
    <string name="c2">correo electrónico:</string>
    <string name="co" />
    <string name="cn">Contraseña nueva:</string>
    <string name="con" />
    <string name="x">Sexo:</string>
    <string name="f">Fecha de nacimiento:</string>
    <string name="p2">¿Por qué tengo que dar esta información?</string>
    <string name="b2">Regístrate</string>
    <string name="p3">Crear una página</string>
    <string name="p4">para un, famoso grupo de música o empresa</string>
    <string name="fe" />
    <string name="r1">Hombre</string>
    <string name="r2">Mujer</string>
</resources>